src/objects/Case_Solution__kav.object
<CustomObject><fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Solutions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Article_Expiration_Date__c</fullName>
        <label>Article Expiration Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Attachment_1__c</fullName>
        <label>Attachment 1</label>
        <type>File</type>
    </fields><fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields><fields>
        <fullName>Attachment_3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields><fields>
        <fullName>Content__c</fullName>
        <description>Content for the Case Solution KB</description>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Feedback__c</fullName>
        <formula>HYPERLINK("mailto:" &amp; "casesolutions@trade.gov" &amp; "?subject=Feedback for " + "Article Number: " + ArticleNumber + " / " + "Article Title - " + Title, "Send email to provide feedback or contribute to this Case Solution.")</formula>
        <label>Feedback</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Video component to display along with this article.</inlineHelpText>
        <label>Video</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Case Solutions</relationshipLabel>
        <relationshipName>Case_Solutions</relationshipName>
        <type>Lookup</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>ITA's Case Solution</description><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><label>Case Solutions</label><pluralLabel>Case Solutions</pluralLabel></CustomObject>